# paige

./: .gitignore  README.md  app.py  config.toml  pyproject.toml
backend/app/: __init__.py  agent.py  config.py  deps.py  main.py  schemas.py  session.py
backend/app/routers/: __init__.py  auth.py  export.py  generate.py  images.py  misc.py  upload.py
deploy/: README-deploy.md  nginx-paige.conf  paige-backend.service
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AccessGate.tsx  BulletSection.tsx  Exports.tsx  FigureSelectSection.tsx  ImageSearchSection.tsx  PocSection.tsx  TextSection.tsx  UploadPanel.tsx  common.tsx
frontend/src/store/: appStore.ts
frontend/src/styles/: index.css
highlight/: __init__.py  llm.py  prompts.py  utils.py
highlight/data/: highlight_template.pptx
plans/: paige-js-migration-plan.md
tests/: test_agent.py
