[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "highlight"
description = "Generate publication highlights using AI"
readme = "README.md"
version = "0.1.1"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Chris Vernon", email = "chris.vernon@pnnl.gov"},

]
maintainers = [
    {name = "Chris Vernon", email = "chris.vernon@pnnl.gov"},
]
dependencies = [
    'docxtpl>=0.16.7',
    'python-pptx>=0.6.23',
    'openai>=1.35.14',
    'pypdf>=3.0.1',
    'tiktoken>=0.7.0',
    'tqdm>=4.66.1',
    'requests>=2.25.0',
    'pymupdf>=1.23.0',
    'fastapi>=0.111.0',
    'uvicorn[standard]>=0.30.0',
    'pydantic>=2.7.0',
    'pydantic-settings>=2.3.0',
    'pydantic-ai>=0.0.14,<3',
    'python-multipart>=0.0.9',
]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.12.1",
]

deploy = [
    "twine>=4.0.1",
]

[project.urls]
Repository = "https://github.com/crvernon/highlight"

[tool.hatch.build]
packages = ["highlight"]  # set importable package name to "cerf"
include = [
    "highlight",
    "highlight/data/**",
]
